# kino-back

./: README.md  hello.py  kino_db.cnf  manage.py  pyproject.toml  requirements.txt
cinema/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
cinema/migrations/: 0001_initial.py
kino/: settings.py  urls.py
