[project]
name = "kino-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "mysqlclient>=2.2.7",
    "python-dotenv>=1.0.1",
    "sqlparse>=0.5.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "ruff>=0.9.1",
]
